--- a/hhh/oneColFixCtr.css
+++ b/hhh/oneColFixCtr.css
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6, p {
 	font-size: medium;
 	font-weight: bold;
 	text-align: center;
+	color: #000;
 }
 a img { /* this selector removes the default blue border displayed in some browsers around an image when it is surrounded by a link */
 	border: none;
@@ -150,7 +151,6 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 
 .container .cong-box2 {
 	float: left;
-	background-color: #0f0;
 	border-top-width: 2px;
 	border-right-width: 2px;
 	border-bottom-width: 2px;
@@ -164,8 +164,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 }
 
 .container .cong-box3 {
-	float: none;
-	background-color: #00f;
+	float: left;
 	border-top-width: 2px;
 	border-right-width: 2px;
 	border-bottom-width: 2px;
@@ -176,7 +175,9 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	border-left-style: solid;
 	width: 40%;
 	height: 500px;
-}#form1 .container .cong-box1 #honors {
+}
+
+#form1 .container .cong-box1 #honors {
 	border-top-width: 1px;
 	border-right-width: 1px;
 	border-bottom-width: 1px;
