--- a/hh-honors/oneColFixCtr.css
+++ b/hh-honors/oneColFixCtr.css
@@ -71,18 +71,15 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	line-height: 0px;
 }
 
-.container .assign-top {
-	text-align: center;	
+div.assign-top {
+	text-align: center;
 }
 
 .container .content-box1 {
 	float: left;
 	background-color:#9FCFE0;
 	border-color: #000;
-	border-top-width: 2px;
-	border-right-width: 2px;
-	border-bottom-width: 2px;
-	border-left-width: 2px;
+	border-width: 1px;
 	border-top-style: solid;
 	border-right-style: solid;
 	border-bottom-style: solid;
@@ -95,10 +92,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	float: left;
 	background-color:#9FCFE0;
 	border-color: #000;
-	border-top-width: 2px;
-	border-right-width: 2px;
-	border-bottom-width: 2px;
-	border-left-width: 2px;
+	border-width: 1px;
 	border-top-style: solid;
 	border-right-style: solid;
 	border-bottom-style: solid;
@@ -111,10 +105,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	float:left;
 	background-color:#9FCFE0;
 	border-color: #000;
-	border-top-width: 2px;
-	border-right-width: 2px;
-	border-bottom-width: 2px;
-	border-left-width: 2px;
+	border-width: 1px;
 	border-top-style: solid;
 	border-right-style: solid;
 	border-bottom-style: solid;
@@ -146,28 +137,12 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 
 .container .cong-box2 {
 	float: left;
-	border-top-width: 2px;
-	border-right-width: 2px;
-	border-bottom-width: 2px;
-	border-left-width: 2px;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
-	width: 15%
+	width: 15%;
 	height: 500px;
 }
 
 .container .cong-box3 {
 	float: left;
-	border-top-width: 2px;
-	border-right-width: 2px;
-	border-bottom-width: 2px;
-	border-left-width: 2px;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
 	width: 40%;
 	height: 500px;
 }
