Nightly snapshot. Assign/View modes mostly working CSS fix was for the <hr>

--- a/hh-honors/oneColFixCtr.css
+++ b/hh-honors/oneColFixCtr.css
@@ -111,6 +111,7 @@ div.assign-top {
 	border-bottom-style: solid;
 	border-left-style: solid;
 	height: 50px;
+	text-align: left;
 }
 	
 .container input {
