--- a/hh-honors/oneColFixCtr.css
+++ b/hh-honors/oneColFixCtr.css
@@ -129,7 +129,7 @@ div.assign-top {
 
 .container input.add {
 	width:80px;
-	background-color: #9F9;
+	background-color: #fa0;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
