--- a/auction/styles.css
+++ b/auction/styles.css
@@ -172,7 +172,7 @@ hh_intro   {
 }
 
 .spiritTable {
-	font-weight: medium;
+	font-weight: 500;
 	margin-left: 5px;
 	margin-bottom: 5px;
 	border-top-width: 1px;
@@ -180,7 +180,7 @@ hh_intro   {
 	border-bottom-width: 1px;
 	border-left-width: 1px;
 	border-top-style: solid;
-	border-right-style: solid
+	border-right-style: solid;
 	border-bottom-style: solid;
 	border-left-style: solid;
 	border-right-style: solid;
