Debug switches now working More cleanup Ready to push live

--- a/auction/style/main.css
+++ b/auction/style/main.css
@@ -76,3 +76,19 @@ td.action {
    padding: 5px;
    text-align: center;
 }
+
+td.dbg-on {
+    background-color: lightgreen;
+    text-align: center;
+
+}
+
+td.dbg-off {
+    background-color: red;
+    text-align: center;
+}
+
+td.dbg-part {
+    background-color: yellow;
+    text-align: center;
+}
