Shrink the table so there is a right margin

--- a/auction/styles.css
+++ b/auction/styles.css
@@ -356,6 +356,7 @@ hh_intro   {
 .content table {
         background-color: #000000;
         border-collapse: collapse;
+        width: 98%;
 }
 
 .content tr.sched {
