--- a/hh-honors/css/honors.css
+++ b/hh-honors/css/honors.css
@@ -61,3 +61,9 @@ input.topDays {
 .container input#preview {
    width: 10px;
 }
+
+div.already {
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 16pt;
+}
